--- a/leccion21-eg/assets/css/style.css
+++ b/leccion21-eg/assets/css/style.css
@@ -76,6 +76,13 @@ header{
 .box-work {
   display: inline-block;
   margin: 10px 17px;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: 0.3s;
+}
+
+.box-work:hover {
+  opacity: 0.7;
 }
 
 #footer {
